--- a/fylo-data-storage-component-master/css/style.css
+++ b/fylo-data-storage-component-master/css/style.css
@@ -13,12 +13,6 @@ body {
   font-weight: 400;
   line-height: 1;
   color: #fff;
-
-  background-color: #0c122c;
-  /* How background-image be flexible with viewport? */
-  background-image: url("../images/bg-desktop.png");
-  background-repeat: no-repeat;
-  background-position: bottom;
 }
 
 /************************/
@@ -26,16 +20,22 @@ body {
 /************************/
 
 .section-fylo {
+  background-color: #0c122c;
+  /* How background-image be flexible with viewport? */
+  background-image: url("../images/bg-desktop.png");
+  background-repeat: no-repeat;
+  background-position: bottom;
   height: 100vh;
 
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 .container {
   width: 100%;
-  padding: 12.8rem;
+  padding: 0 6.4rem;
   display: flex;
   gap: 3.2rem;
   justify-content: center;
@@ -45,12 +45,12 @@ body {
 .operations,
 .storage {
   background-color: #1d2c67;
-  padding: 3.2rem;
   border-radius: 10px;
 }
 
 .operations {
   width: 25%;
+  padding: 4.8rem;
   border-top-right-radius: 60px;
 }
 
@@ -84,6 +84,7 @@ body {
 
 .storage {
   width: 45%;
+  padding: 3.2rem;
   font-size: 1.4rem;
   position: relative;
 }
@@ -133,7 +134,7 @@ body {
 .storage-left {
   background-color: #fff;
   color: hsl(229, 7%, 55%);
-  width: 35%;
+  width: 30%;
   position: absolute;
   top: 0;
   right: 3rem;
@@ -143,7 +144,7 @@ body {
 }
 
 .storage-left-inner {
-  padding: 1.2rem 2.4rem;
+  padding: 1.6rem 2.4rem;
   position: relative;
   display: flex;
   gap: 0.8rem;
@@ -186,11 +187,12 @@ body {
 /* Footer */
 /************************/
 
-.footer {
-  margin-bottom: 3.2rem;
+.copyright {
   color: #eee;
   font-size: 1.2rem;
   text-align: center;
+  position: absolute;
+  bottom: 2.4rem;
 }
 
 .links:link,
